# sea-of-marios

./: .gitignore  flake.nix  run  star_rod.cfg  test_2player
.github/workflows/: build.yaml
bridge/: Cargo.toml  README.md
bridge/src/: gdb.rs  gui.rs  main.rs  net.rs
client/: Cargo.toml  project64.js
client/src/: gdb.rs  gui.rs  main.rs  net.rs  rpc.rs
include/: common.h  common_structs.h  effects.h  enums.h  filemenu.h  include_asset.h  macros.h  map.h  model.h  saved_byte_names.h  saved_flag_names.h
include/gcc/: string.h
include/libc/: xstdio.h
include/mapfs/: dst_00_hit.h  dst_00_shape.h  dst_01_hit.h  dst_01_shape.h  dst_05_shape.h  grs_01_hit.h  grs_01_shape.h  net_00_hit.h  net_00_shape.h  net_01_hit.h  net_01_shape.h  net_bt00_shape.h  prt_00_hit.h  prt_00_shape.h  sbk_13_hit.h  sbk_13_shape.h  trp_00_hit.h  trp_00_shape.h  trp_01_hit.h  trp_01_shape.h
include/script_api/: battle.h
manual/: setup-dx.sh  setup.md
src/: 101b90_len_8f0.c  77480.c  7BB60.c  7E9D0.c  entity.c  foliage.hpp  hud_element.h  inventory.c  main_loop.c  model.c  move_table.yaml  npc.c  ship.cpp  ship.h  sprite.c  startup_screen_fading.c  state_intro.c  state_logos.c  state_map_transitions.c  state_startup.c  state_title_screen.c  state_world.c  state_world.cpp
src/battle/: 16C8E0.c  190B20.c  action_cmd.h  actor_api.c  actor_rendering.c  actors.yaml  battle.cpp  battle.h  battle_tables.h  btl_states_actions.c  player_events.c
src/dx/: config.h  debug_menu.c  debug_menu.h  profiling.h  sea-of-marios.code-workspace  versioning.c  versioning.h
src/entity/: Chest.c
(+184 files in other folders)
